se agrego disqus

--- a/themes/academic/layouts/_default/single.html
+++ b/themes/academic/layouts/_default/single.html
@@ -35,7 +35,9 @@
     </div>
     {{ end }}
 
-    {{ partial "comments.html" . }}
+    <div class="article-container">
+      {{ partial "comments.html" . }}
+    </div>
 
   </div>
 </article>
