--- a/themes/academic/layouts/partials/header.html
+++ b/themes/academic/layouts/partials/header.html
@@ -138,8 +138,8 @@
   {{ end }}
 
   <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
-  <link rel="icon" type="image/png" href="{{ "/img/icon.png" | relURL }}">
-  <link rel="apple-touch-icon" type="image/png" href="{{ "/img/icon-192.png" | relURL }}">
+  <!--<link rel="icon" type="image/png" href="{{ "/img/icon.png" | relURL }}">-->
+  <!--<link rel="apple-touch-icon" type="image/png" href="{{ "/img/icon-192.png" | relURL }}">-->
 
   <link rel="canonical" href="{{ .Permalink }}">
 
@@ -156,7 +156,7 @@
     {{ $og_image = (printf "img/%s" site.Params.avatar) | absURL }}
     {{ $twitter_card = "summary" }}
   {{ else }}
-    {{ $og_image = "img/icon-192.png" | absURL }}
+    <!--{{ $og_image = "img/icon-192.png" | absURL }}-->
     {{ $twitter_card = "summary" }}
   {{ end }}
   <meta property="twitter:card" content="{{ $twitter_card }}">
